// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorsSectionContainer component should render default view 1`] = `
<ContextProvider
  value={
    Object {
      "formValues": Object {},
    }
  }
>
  <Memo(AuthorsSection) />
</ContextProvider>
`;

exports[`AuthorsSectionContainer component should render disabled view 1`] = `
<ContextProvider
  value={
    Object {
      "formValues": Object {},
    }
  }
>
  <Memo(AuthorsSection)
    disabled={true}
  />
</ContextProvider>
`;
